# modular-rollup

./: .gitignore  Cargo.toml  README.md  constants.json  private_key.json  rollup_config.toml  wallet_state.json
adapters/celestia/: Cargo.toml
adapters/celestia/src/: lib.rs  service.rs  verifier.rs
adapters/celestia/src/types/: address.rs  mod.rs
adapters/mock/: Cargo.toml
adapters/mock-da/: Cargo.toml
adapters/mock-da/src/: lib.rs  service.rs
adapters/mock-da/src/types/: mod.rs
adapters/mock/src/: lib.rs  service.rs  verifier.rs
adapters/mock/src/types/: address.rs  mod.rs
demo-rollup/: Cargo.toml  Makefile  celestia_rollup_config.toml  mock_rollup_config.toml
demo-rollup/src/: celestia_rollup.rs  lib.rs  mock_rollup.rs
demo-rollup/src/stf/: runtime.rs
docker/: docker-compose.yml
docker/credentials/: bridge-0.jwt
full-node/sov-db/: Cargo.toml
full-node/sov-db/src/: lib.rs  rocks_db_config.rs
full-node/sov-db/src/ledger_db/: mod.rs
full-node/sov-db/src/schema/: table.rs
full-node/sov-prover-storage-manager/: Cargo.toml
full-node/sov-prover-storage-manager/src/: lib.rs
full-node/sov-schema-db/: Cargo.toml
full-node/sov-schema-db/src/: iterator.rs  lib.rs  schema.rs
full-node/sov-sequencer/: Cargo.toml
full-node/sov-sequencer/src/: batch_builder.rs  lib.rs  rpc.rs
full-node/sov-stf-runner/: Cargo.toml
full-node/sov-stf-runner/src/: config.rs  lib.rs  runner.rs
module-implementations/sov-bank/: Cargo.toml
module-implementations/sov-bank/src/: call.rs  genesis.rs  hook.rs  hooks.rs  lib.rs  query.rs  token.rs  utils.rs
module-implementations/sov-bank/tests/: create_token_test.rs
module-implementations/sov-bank/tests/helpers/: mod.rs
module-implementations/sov-nft/: Cargo.toml
module-implementations/sov-nft/src/: call.rs  collection.rs  lib.rs  nft.rs  query.rs
module-implementations/sov-nft/tests/: nft_test.rs
module-system/module-implementations/bank-module/: Cargo.toml
module-system/module-implementations/bank-module/src/: call.rs  lib.rs  rpc.rs  token.rs  utils.rs
module-system/module-implementations/my-module/: Cargo.toml
module-system/module-implementations/my-module/src/: lib.rs  rpc.rs
module-system/module-implementations/sov-bank/src/: call.rs  query.rs
module-system/sov-cli/: Cargo.toml
module-system/sov-cli/src/: lib.rs  wallet_state.rs
module-system/sov-cli/src/workflows/: key.rs  mod.rs  rpc.rs  transaction.rs
module-system/sov-modules-api/: Cargo.toml
module-system/sov-modules-api/src/: default_context.rs  default_signature.rs  lib.rs  transaction.rs  utils.rs
module-system/sov-modules-core/: Cargo.toml
module-system/sov-modules-core/src/: lib.rs
module-system/sov-modules-core/src/common/: address.rs  key.rs  mod.rs
module-system/sov-modules-core/src/module/: call.rs  dispatch.rs  mod.rs  spec.rs
module-system/sov-modules-core/src/storage/: mod.rs
module-system/sov-modules-rollup-blueprint/: Cargo.toml
module-system/sov-modules-rollup-blueprint/src/: lib.rs  runtime_rpc.rs  wallet.rs
module-system/sov-modules-stf-blueprint/: Cargo.toml
module-system/sov-modules-stf-blueprint/src/: lib.rs  stf_blueprint.rs
module-system/sov-state/: Cargo.toml
module-system/sov-state/src/: lib.rs  prover_storage.rs
rollup-interface/: Cargo.toml
rollup-interface/src/: lib.rs
rollup-interface/src/node/services/: batch_builder.rs  da.rs  mod.rs
rollup-interface/src/state/: da.rs  mod.rs  stf.rs  storage.rs
