[workspace]
resolver = "2"
members = [
    "demo-rollup",
    "full-node/sov-db",
    "full-node/sov-prover-storage-manager",
    "full-node/sov-schema-db",
    "full-node/sov-stf-runner",
    "module-system/module-implementations/sov-nft",
    "module-system/module-implementations/my-module",
    "module-system/module-implementations/sov-bank",
    "module-system/sov-modules-core",
    "module-system/sov-modules-rollup-blueprint",
    "module-system/sov-state",
    "module-system/sov-modules-stf-blueprint",
    "rollup-interface"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kobakaku/sovereign-rollup"
authors = ["kobakaku"]

[workspace.dependencies]
# Adapters
# sov-mock-da = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# sov-celestia-adapter = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# sov-risc0-adapter = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# Full Node
sov-prover-storage-manager = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# sov-stf-runner = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# sov-db = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# sov-sequencer = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# Module System
# sov-modules-rollup-blueprint = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-modules-api = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-state = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-modules-stf-blueprint = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# sov-accounts = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# sov-bank = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# sov-sequencer-registry = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-modules-macros = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# Rollup Interface
sov-rollup-interface = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }

serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
anyhow = "1.0.68"
clap = { version = "4.4.10", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.71"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
schemars = { version = "0.8.16", features = ["derive"] }
tempfile = "3.8"
toml = "0.8.0"
futures = "0.3"
rocksdb = { version = "0.21.0" }