[workspace]
resolver = "2"
members = [
    "adapters/celestia",
    "adapters/mock",
    "demo-rollup",
    "full-node/sov-db",
    "full-node/sov-prover-storage-manager",
    "full-node/sov-schema-db",
    "full-node/sov-sequencer",
    "full-node/sov-stf-runner",
    "module-system/module-implementations/my-module",
    "module-system/module-implementations/bank-module",
    "module-system/sov-cli",
    "module-system/sov-modules-api",
    "module-system/sov-modules-core",
    "module-system/sov-modules-rollup-blueprint",
    "module-system/sov-state",
    "module-system/sov-modules-stf-blueprint",
    "rollup-interface"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kobakaku/ssr"
authors = ["kobakaku"]

[workspace.dependencies]
jmt = { git = "https://github.com/penumbra-zone/jmt.git", rev = "1d007e11cb68aa5ca13e9a5af4a12e6439d5f7b6" }

serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
anyhow = "1.0.68"
clap = { version = "4.4.10", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.71"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
schemars = { version = "0.8.16", features = ["derive"] }
tempfile = "3.8"
toml = "0.8.0"
futures = "0.3"
rocksdb = { version = "0.21.0" }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
sha2 = { version = "0.10.6", default-features = false }
bech32 = { version = "0.9.1", default-features = false }
derive_more = { version = "0.99.11", default-features = false }