[package]
name = "demo-rollup"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sov-modules-api = { path = "../module-system/sov-modules-api" }
sov-modules-rollup-blueprint = { path = "../module-system/sov-modules-rollup-blueprint" }
sov-stf-runner = { path = "../full-node/sov-stf-runner" }
sov-prover-storage-manager = { path = "../full-node/sov-prover-storage-manager" }


[features]
default = []
