[package]
name = "demo-rollup"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

sov-mock = { path = "../adapters/mock", optional = true }
sov-celestia = { path = "../adapters/celestia", optional = true }
sov-prover-storage-manager = { path = "../full-node/sov-prover-storage-manager" }
sov-stf-runner = { path = "../full-node/sov-stf-runner" }
sov-bank-module = { path = "../module-system/module-implementations/bank-module" }
sov-cli = { path = "../module-system/sov-cli" }
sov-modules-api = { path = "../module-system/sov-modules-api" }
sov-modules-core = { path = "../module-system/sov-modules-core" }
sov-modules-rollup-blueprint = { path = "../module-system/sov-modules-rollup-blueprint" }
sov-modules-stf-blueprint = { path = "../module-system/sov-modules-stf-blueprint" }


[features]
default = ["celestia"]
mock = ["sov-mock"]
celestia = ["sov-celestia"]
