[package]
name = "sov-celestia"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio= { workspace = true }
sha2= { workspace = true }

rollup-interface = { path = "../../rollup-interface" }

[features]
default = []
