[package]
name = "sov-mock-da"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

rollup-interface = { path = "../../rollup-interface" }

[features]
default = []
