[package]
name = "sov-db"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
rocksdb = { workspace = true }

sov-schema-db = { path = "../sov-schema-db" }

[features]
default = []