[package]
name = "sov-prover-storage-manager"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }

rollup-interface = { path = "../../rollup-interface" }
sov-state = { path = "../../module-system/sov-state" }

[features]
default = []
