[package]
name = "sov-sequencer"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "server"]  }
tracing = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }

sov-modules-api = { path = "../../module-system/sov-modules-api" }
sov-modules-core = { path = "../../module-system/sov-modules-core" }
rollup-interface = { path = "../../rollup-interface" }

[features]
default = []
