[package]
name = "sov-bank"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }
schemars = { workspace = true, optional = true }

sov-modules-api = { workspace = true }
sov-state = { workspace = true }

[dev-dependencies]
sov-prover-storage-manager = { workspace = true, features = ["test-utils"] }
sov-bank = { path = ".", features = ["native"] }
tempfile = { workspace = true }

[features]
default = []
native = ["sov-state/native", "sov-modules-api/native", "serde", "serde_json", "jsonrpsee", "schemars",]
serde = []