[package]
name = "sov-modules-api"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }

sov-modules-core = { path = "../sov-modules-core" }
sov-state = { path = "../sov-state" }

[features]
default = []
