[package]
name = "sov-modules-core"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }

rollup-interface = { path = "../../rollup-interface" }

[features]
default = []
