[package]
name = "sov-modules-core"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
bech32 = { workspace = true }
derive_more = { workspace = true, features = ["display", "into"] }

rollup-interface = { path = "../../rollup-interface" }

[features]
default = []
