[package]
name = "sov-modules-rollup-blueprint"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
tokio = { workspace = true }
borsh = { workspace = true }
async-trait = { workspace = true }

sov-modules-api = { workspace = true }
sov-state = { workspace = true }
sov-rollup-interface = { workspace = true }
sov-stf-runner = { path = "../../full-node/sov-stf-runner" }
# sov-modules-stf-blueprint = { workspace = true }

[dev-dependencies]
sov-modules-rollup-blueprint = { path = "." }

[features]
default = []
