[package]
name = "sov-modules-rollup-blueprint"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true }
borsh = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

sov-db = { path = "../../full-node/sov-db" }
sov-stf-runner = { path = "../../full-node/sov-stf-runner" }
my-module = { path = "../../module-system/module-implementations/my-module" }
sov-modules-stf-blueprint = { path = "../sov-modules-stf-blueprint" }

[features]
default = []
