[package]
name = "sov-modules-rollup-blueprint"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true }
borsh = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

sov-db = { path = "../../full-node/sov-db" }
sov-sequencer = { path = "../../full-node/sov-sequencer" }
sov-stf-runner = { path = "../../full-node/sov-stf-runner" }
sov-bank-module = { path = "../module-implementations/bank-module" }
sov-modules-stf-blueprint = { path = "../sov-modules-stf-blueprint" }
sov-modules-core = { path = "../sov-modules-core" }
rollup-interface = { path = "../../rollup-interface" }

[features]
default = []
