[package]
name = "sov-bank-module"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "server"] }
tracing = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }

sov-modules-core = { path = "../../../module-system/sov-modules-core" }

[features]
default = []